fix layout and spacing for tags

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -56,12 +56,14 @@ ul.imageGallery {
     max-width: 300px;
     padding-left: .5rem;
     padding-right: .5rem;
-    margin-bottom: 1rem;
 
     figure {
       picture {
         filter: drop-shadow(.25rem .25rem 10rem rgba(255, 255, 255, 0.25));
-        img {
+        > img {
+          margin-bottom: .25rem;
+        }
+        > img {
           display: block;
           width: 100%;
           object-fit: cover;
@@ -71,7 +73,9 @@ ul.imageGallery {
         }
       }
       > figcaption, section {
-        padding: .5rem;
+        padding-right: .5rem;
+        padding-left: .5rem;
+        padding-top: .5rem;
         > a {
           text-decoration: none;
         }
