--- a/src/styles/Tags.module.scss
+++ b/src/styles/Tags.module.scss
@@ -1,6 +1,7 @@
 section.tags {
   > a > code {
-    margin-right: .2rem;
+    margin-right: .5rem;
+    margin-bottom: .5rem;
     padding: .4rem;
     border-radius: 1rem;
     display: inline-block;
